<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:fitsSystemWindows="true">

    <ScrollView
        android:id="@+id/createQrScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="@dimen/top_padding"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/adViewContainer">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/content_padding"
                android:layout_gravity="center"
                tools:ignore="MissingConstraints">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inputEncryptText"
                    android:textSize="@dimen/title_text_size"
                    android:textColor="@color/primary_blue"
                    android:layout_marginTop="@dimen/large_margin"
                    android:layout_marginBottom="@dimen/medium_margin" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/medium_margin"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/inputEncryptTextArea"
                        android:inputType="textMultiLine"
                        android:minHeight="@dimen/input_text_min_height"
                        android:gravity="top"
                        android:background="@color/input_background" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inputEncryptionKey"
                    android:textSize="@dimen/title_text_size"
                    android:textColor="@color/primary_blue"
                    android:layout_marginBottom="@dimen/medium_margin" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/keyInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/medium_margin"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputKey"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/inputEncryptionKeyArea"
                        android:inputType="text|textNoSuggestions"
                        android:minHeight="@dimen/input_key_min_height"
                        android:gravity="top"
                        android:background="@color/input_background" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/createButton"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/medium_margin"
                    android:layout_gravity="center"
                    android:padding="@dimen/button_padding"
                    android:stateListAnimator="@animator/button_state_list_animator"
                    android:text="@string/creationQRCode"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_text_size"
                    android:backgroundTint="@color/button_background"
                    app:cornerRadius="@dimen/button_corner_radius"
                    app:strokeColor="@color/black"
                    app:strokeWidth="@dimen/button_stroke_width" />

                <ImageView
                    android:id="@+id/qrImageView"
                    android:layout_width="@dimen/qr_image_size"
                    android:layout_height="@dimen/qr_image_size"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:visibility="gone" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <!--  バナー広告  -->
    <FrameLayout
        android:id="@+id/adViewContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- ホームに戻るボタンを最前面に固定 -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false"
        android:focusable="false">

        <include
            android:id="@+id/homeButton"
            layout="@layout/back_home_button_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|start"
            android:layout_margin="@dimen/button_margin"
            android:elevation="@dimen/button_elevation" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
